syntax = "proto3";

option java_multiple_files = false;
option java_package = "pers.lbf.news.proto";
option java_outer_classname = "SmsProtoMessage";

message SmsSendReq {
    repeated string number = 1;
    string content = 2;
}

message SmsSendResp {
    string result = 1;
}