syntax = "proto3";

option java_multiple_files = false;
option java_package = "pers.lbf.news.proto";
option java_outer_classname = "SmsProto";

package sms;

import "sms/smsMessage.proto";

service SmsService {
    rpc Send(SmsSendReq) returns (stream SmsSendResp) {}
    rpc CreatePhone(stream CreatePhoneReq) returns (CreatePhoneResp) {}

}




